<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:orientation="vertical">
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_margin="4dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_first_name_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_prompt" />

        <EditText
            android:id="@+id/et_last_name_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_prompt" />

        <EditText
            android:id="@+id/et_email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_signup"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

    </LinearLayout>

</android.support.v7.widget.CardView>




</LinearLayout>